tests/build/fail/widget/declared_property_expected_type.stderr
error: unexpected token
 --> $DIR/declared_property_expected_type.rs:6:15
  |
6 |         foo { 10 };
  |               ^^
